[workspace]
members = [
  "crates/*", 
]

resolver   = "3"
edition    = "2024"

[workspace.dependencies]
anyhow     = "1.0"
filecheck  = "0.4"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
torch-fx-rs = { git = "https://github.com/maokami/torch-fx-rs", branch = "master" }