[package]
name       = "fx-opt"
edition    = "2024"
authors    = ["Jaeho Choi <almost97sloth@gmail.com>"]
version    = "0.1.0"

[dependencies]
anyhow     = { workspace = true }
clap       = { version = "4", features = ["derive"] }
filecheck  = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "fx-opt"
path = "src/main.rs"

